Fixed a small CSS bug to make the noCaptcha form better align with the WP login inputs
git-svn-id: https://plugins.svn.wordpress.org/uber-nocaptcha-recaptcha/trunk@1104492 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 *   Make the width of the login form bigger so the captcha form fits nicely :)
 */
 #login {
-    width: 360px;
+    width: 350px;
 }
 
 
